--- a/app/src/main/res/layout/fragment_ecran_artiste.xml
+++ b/app/src/main/res/layout/fragment_ecran_artiste.xml
@@ -30,6 +30,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
