--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,10 @@
         android:id="@+id/nav_home"
         android:icon="@drawable/home"
         android:title="" />
-
+    <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/search"
+        android:title="" />
 
 
     <item
