--- a/app/src/main/res/layout/fragment_ecran_lecture.xml
+++ b/app/src/main/res/layout/fragment_ecran_lecture.xml
@@ -20,7 +20,7 @@
             android:layout_margin="40dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@drawable/humps" />
+            android:src="@drawable/placeholder_image" />
 
         <LinearLayout
             android:layout_width="match_parent"
