--- a/app/src/main/res/layout/fragment_ecran_recherche.xml
+++ b/app/src/main/res/layout/fragment_ecran_recherche.xml
@@ -74,7 +74,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/humps" />
+                        android:src="@drawable/placeholder_image" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
