--- a/app/src/main/res/layout/item_nouveaute_accueil.xml
+++ b/app/src/main/res/layout/item_nouveaute_accueil.xml
@@ -26,7 +26,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="4dp"
-        android:text="Nom de l'artiste"
+        android:text="Nom de la chanson"
         android:textColor="#000000"
         android:textSize="14sp" />
+    <TextView
+        android:id="@+id/textViewArtiste"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="2dp"
+        android:text="Nom de l'artiste"
+        android:textColor="#757575"
+        android:textSize="12sp" />
 </LinearLayout>
