--- a/app/src/main/res/layout/fragment_ecran_chansons_l_d_l.xml
+++ b/app/src/main/res/layout/fragment_ecran_chansons_l_d_l.xml
@@ -51,7 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/cry" />
+                    android:src="@drawable/sun" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -94,7 +94,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
-
 
 </FrameLayout>
