--- a/app/src/main/res/layout/fragment_ecran_lecture.xml
+++ b/app/src/main/res/layout/fragment_ecran_lecture.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="30dp"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -17,7 +18,7 @@
             android:id="@+id/imageAlbum"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="40dp"
+            android:layout_margin="0dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
             android:src="@drawable/placeholder_image" />
@@ -80,7 +81,7 @@
             android:progress="45" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="331dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center"
@@ -104,8 +105,6 @@
                 android:id="@+id/btnPlayPause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/play" />
 
@@ -120,7 +119,6 @@
                 android:id="@+id/btnRepeat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/repeat" />
         </LinearLayout>
